# audio-task

./: README.md  generate_json_schema.py  pyproject.toml
examples/: example.py  fp16_example.py  quant_example.py
schema/: text-to-audio-task.json
src/audio_task/: config.py
src/audio_task/inference/: inference.py  key.py  utils.py
src/audio_task/models/: __init__.py  args.py
