[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audio_task"
authors = [{ name = "iwehf", email = "henry.lee@crynux.ai" }]
description = "A general framework to define and execute the audio generation task."
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3"]
version = "0.0.1"
dependencies = [
    "numpy",
    "scipy",
    "torch>=1.4",
    "transformers>=4.35.2",
    "transformers_stream_generator",
    "sentencepiece",
    "accelerate",
    "bitsandbytes",
    "tiktoken",
    "einops",
    "pydantic",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["audio_task*"]
